# projective-FHE

./: .gitignore  COLAB_GPU_SETUP.md  Pipfile  README.md  colab_gpu_benchmark.ipynb  colab_gpu_setup.sh  colab_quick_fix.sh  grid_sweep_ff.py  sla_validation_results.csv  sweep_results.csv  utils.py
analysis/: compare_pseudoinverse.py  debug_matrix_conditioning.py  debug_noise_sources.py  debug_projection.py  debug_projection_loss.py  debug_scaled_projection.py  debug_single_run.py  geometric_decay_test.py  mock_cipher_pipeline_test.py  packed_mock_cipher_test.py  random_external_matrix_test.py  signal_decay_test.py  tuned_signal_decay_test.py  validate_matrix_properties.py  varied_signal_range_fd_test.py  varied_signal_range_test.py
openfhe_prototype/: CMakeLists.txt  CMakeLists_mock.txt  DUAL_MODE_SUMMARY.md  README.md  benchmark_modes.cpp  encoding.cpp  encoding.h  mock_openfhe.h  monitor.cpp  monitor.h  params.cpp  params.h  pipeline.cpp  pipeline.h  projection.cpp  projection.h  security_analysis.md  security_estimator.py  simple_workload_test.cpp  syntax_test.cpp  test_includes  test_includes.cpp  test_parity.cpp  utils.cpp  utils.h  workload_100_cycles.cpp
openfhe_prototype/build_gpu/: CMakeCache.txt
openfhe_prototype/openfhe-install/include/openfhe/core/: config_core.h
openfhe_prototype/openfhe-install/lib/: libOPENFHEbinfhe.1.3.1.dylib  libOPENFHEbinfhe.1.dylib  libOPENFHEcore.1.3.1.dylib  libOPENFHEcore.1.dylib  libOPENFHEpke.1.3.1.dylib  libOPENFHEpke.1.dylib
openfhe_prototype/openfhe-install/lib/OpenFHE/: OpenFHEConfig.cmake  OpenFHEConfigVersion.cmake  OpenFHETargets-release.cmake  OpenFHETargets.cmake
simulation/ff_poc/: mult_proj_poc_ff.py  qc_matrix_ff.py  qc_mds_monte_carlo.py  run_sla_validation.py
simulation/float_poc/: mult_proj_poc.py  qc_matrix.py
tests/: test_projection.py
